fix popup size on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,8 @@
+#depo-form, #enable-form, #wd-form{
+	max-width: 600px;
+	width: 90%;
+}
+
 @media only screen and (max-width: 768px) {
   #btn_connect_metamask span {
 	display: none;
